<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/selector_home"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_shop"
        android:icon="@drawable/selector_shop"
        android:title="@string/e_shop" />

    <item
        android:id="@+id/menu_account"
        android:icon="@drawable/selector_person"
        android:title="@string/account" />

    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/selector_cart"
        android:title="@string/cart" />

    <item
        android:id="@+id/menu_wishlist"
        android:icon="@drawable/selector_heart"
        android:title="@string/wishlist" />
</menu>