<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.registration.RegisterFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="40dp"
                android:paddingVertical="16dp">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="170dp"
                    android:layout_height="170dp"
                    android:layout_gravity="center"
                    android:src="@drawable/img_logo_red"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:paddingTop="10dp"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/text_color"
                    android:textSize="35sp" />

                

                <com.chaos.view.PinView
                    android:visibility="gone"
                    android:id="@+id/pinView"
                    style="@style/PinWidget.PinView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:cursorVisible="true"
                    android:hint="00000"
                    android:inputType="number"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/text_color2"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    app:cursorColor="@color/primary_red"
                    app:cursorWidth="2dp"
                    app:hideLineWhenFilled="true"
                    app:itemCount="5"
                    app:itemHeight="@dimen/_38sdp"
                    app:itemRadius="@dimen/_5sdp"
                    app:itemSpacing="@dimen/_5sdp"
                    app:itemWidth="@dimen/_38sdp"
                    app:lineColor="@color/primary_red"
                    app:lineWidth="2dp"
                    app:viewType="rectangle"
                    tools:ignore="HardcodedText" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/verificationCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusTopStart="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:paddingVertical="5dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    android:layout_marginVertical="10dp"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/verEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="Validation Code"
                        android:inputType="numberSigned"
                        android:maxLength="5"
                        tools:ignore="HardcodedText" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/country"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="1dp"
                    app:boxStrokeWidthFocused=".5dp"
                    android:background="@drawable/bg_login_btn"
                    app:boxCornerRadiusTopStart="10dp"
                    android:paddingVertical="5dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    android:layout_marginVertical="10dp">

                    <AutoCompleteTextView
                        android:id="@+id/selectCountry"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="Country"
                        android:inputType="none"
                        android:layout_marginTop="5dp"
                        android:paddingVertical="16dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        tools:ignore="HardcodedText" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/referId"
                    app:boxCornerRadiusTopStart="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:paddingVertical="3dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="Refer ID"
                        tools:ignore="HardcodedText" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/applicantName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:visibility="gone"
                    app:boxCornerRadiusTopStart="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:paddingVertical="3dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="Applicant Name"
                        tools:ignore="HardcodedText" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/applicantMobile"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="1dp"
                    app:boxStrokeWidthFocused=".5dp"
                    android:background="@drawable/bg_login_btn"
                    app:boxCornerRadiusTopStart="10dp"
                    android:paddingVertical="5dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    android:visibility="gone"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="Applicant Mobile"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/applicantEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxCornerRadiusTopStart="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:paddingVertical="3dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    android:layout_marginVertical="10dp"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="Applicant Email" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/division"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:visibility="gone"
                    app:boxCornerRadiusTopStart="10dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:paddingVertical="3dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/selectDivision"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="Division/State/Province/Zone"
                        android:inputType="none"
                        android:layout_marginTop="5dp"
                        android:paddingVertical="16dp"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/registerInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center_vertical"
                    android:paddingVertical="5dp"
                    android:text="Your personal data will be used to support your experience throughout this website, to manage access to your account, and for other purposes described in our privacy policy."
                    android:visibility="gone"
                    app:lineHeight="20dp"
                    tools:ignore="HardcodedText" />

                <CheckBox
                    android:id="@+id/agreePrivacyPolicy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:buttonTint="@color/primary_red"
                    android:checked="true"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/privacy_policy_title"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/bg_login_btn"
                    android:backgroundTint="@color/primary_blue"
                    android:fontFamily="@font/poppins_bold"
                    android:gravity="center"
                    android:paddingVertical="8dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginVertical="10dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingStart="10dp"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/text_color"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/btnSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:padding="10dp"
                        android:text="@string/sign_in"
                        android:textColor="@color/primary_red" />
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>